<resources>
    <string name="app_name">ThirdChallenge</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email*</string>
    <string name="prompt_password">Contraseña*</string>
    <string name="action_sign_in">INGRESAR</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title">"Nav"</string>
    <string name="title2">" Graph"</string>
    <string name="subtitle">"Navegación"</string>
    <string name="sub_subtitle">"condicional"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer_bottom_nav">DrawerBottomNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="perfil">Perfil\n</string>
    <string name="walking">Walking is simple, yet powerful exercise for your body</string>
</resources>